# Katago_ARM

Third-party library generation&use demo/: 自建so库并提供给第三方使用.md
Third-party library generation&use demo/libso_generate_demo/: settings.gradle
Third-party library generation&use demo/libso_generate_demo/app/: build.gradle
Third-party library generation&use demo/libso_generate_demo/app/src/androidTest/java/com/example/katago20230504/: ExampleInstrumentedTest.java
Third-party library generation&use demo/libso_generate_demo/app/src/main/: AndroidManifest.xml
Third-party library generation&use demo/libso_generate_demo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.cpp  test.h
Third-party library generation&use demo/libso_generate_demo/app/src/main/java/com/example/katago20230504/: MainActivity.java
Third-party library generation&use demo/libso_generate_demo/app/src/main/res/values/: strings.xml  themes.xml
Third-party library generation&use demo/libso_generate_demo/app/src/main/res/values-night/: themes.xml
Third-party library generation&use demo/libso_generate_demo/app/src/test/java/com/example/katago20230504/: ExampleUnitTest.java
Third-party library generation&use demo/libso_generate_demo/gradle/wrapper/: gradle-wrapper.properties
Third-party library generation&use demo/libso_jni_use_test_demo/: settings.gradle
Third-party library generation&use demo/libso_jni_use_test_demo/app/: build.gradle
Third-party library generation&use demo/libso_jni_use_test_demo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Third-party library generation&use demo/libso_jni_use_test_demo/app/src/main/cpp/include/: test.h
Third-party library generation&use demo/libso_jni_use_test_demo/app/src/main/java/com/example/demo3/: MainActivity.java
Third-party library generation&use demo/libso_jni_use_test_demo/gradle/wrapper/: gradle-wrapper.properties
c++_java_stdout_IPC/demo32/: Note.md
c++_java_stdout_IPC/demo32/app/: build.gradle
c++_java_stdout_IPC/demo32/app/src/main/: AndroidManifest.xml
c++_java_stdout_IPC/demo32/app/src/main/cpp/: CMakeLists.txt  cmdline.cpp  katago.cpp  native-lib.cpp  time_thread.cpp
c++_java_stdout_IPC/demo32/app/src/main/cpp/include/: cmdline.h  katago.h  time_thread.h
c++_java_stdout_IPC/demo32/app/src/main/java/com/example/demo3/: MainActivity.java  katago.java
c++_java_stdout_IPC/demo32/app/src/main/res/layout/: activity_main.xml
c++_java_stdout_IPC/demo32/app/src/main/res/values/: strings.xml
data_stream_involved/: 1.txt  demo1.cpp  demo2.cpp  demo3.cpp  dup2函数.cpp  dup2函数用法.cpp  dup2详解.cpp  dup函数.cpp  fgets函数.cpp  linux-dup2函数详解.cpp  linux编程之pipe()函数.md  mine.txt  pipe函数.cpp  std_pipe_demo.cpp
katago_build_android/: settings.gradle
katago_build_android/app/: build.gradle
katago_build_android/app/src/androidTest/java/com/example/goapplication/: ExampleInstrumentedTest.java
katago_build_android/app/src/main/: AndroidManifest.xml
katago_build_android/app/src/main/JniLibs/armeabi-v7a/: libkatago.id2  libkatago.nam  libkatago.til
katago_build_android/app/src/main/cpp/: CMakeLists.txt  cmake_copy.txt  katago.cpp  native-lib.cpp
katago_build_android/app/src/main/cpp/katago/: all_heads.h  main.cpp  main.h
katago_build_android/app/src/main/cpp/katago/command/: analysis.cpp  benchmark.cpp  commandline.cpp  commandline.h  gatekeeper.cpp  gtp.cpp  match.cpp  matchauto.cpp  misc.cpp  runtests.cpp  selfplay.cpp
katago_build_android/app/src/main/cpp/katago/core/: fileutils.cpp  makedir.cpp  sha2.cpp
katago_build_android/app/src/main/cpp/katago/dataio/: files.cpp  homedata.cpp  loadmodel.cpp  numpywrite.cpp
katago_build_android/app/src/main/cpp/katago/neuralnet/: desc.cpp  eigenbackend.cpp
katago_build_android/app/src/main/cpp/katago/tests/: tinymodel.cpp
katago_build_android/app/src/main/cpp/libzip/: zip.h
katago_build_android/app/src/main/java/com/example/goapplication/: MainActivity.java  NativeLib.java  katago.java  test_katago.java
katago_build_android/app/src/main/res/values/: strings.xml  themes.xml
katago_build_android/app/src/main/res/values-night/: themes.xml
katago_build_android/app/src/test/java/com/example/goapplication/: ExampleUnitTest.java
katago_build_android/gradle/wrapper/: gradle-wrapper.properties
